MicroTodoUI-main/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-deployment


spec:
  replicas: 3

  selector:
    matchLabels:
      app: todoui

  strategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: todoui

    spec:
      containers:
      - name: mynginx
        image: acrtodoappsiddharth1.azurecr.io/todoui:v1
        ports:
