MicroTodoUI-main/manifest/service.yml
apiVersion: v1
kind: Service

metadata:
  name: my-service

spec:
  selector:
    app:  todoui

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
